--- a/unibot_project/custom_admin/templates/custom_admin/favorites_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/favorites_list.html
@@ -1,19 +1,16 @@
 {% extends "custom_admin/generic_list.html" %}
-
 {% block list_title %}المفضلات{% endblock %}
-
 {% block list_headers %}
   <th>المستخدم</th>
   <th>السؤال</th>
-  <th>أُضيفت في</th>
+  <th>التاريخ</th>
 {% endblock %}
-
 {% block list_rows %}
-  {% for r in items %}
+  {% for fav in items %}
     <tr>
-      <td>{{ r.user.email }}</td>
-      <td>{{ r.faq.question|truncatechars:60 }}</td>
-      <td>{{ r.created_at|date:"Y-m-d H:i" }}</td>
+      <td>{{ fav.user.email|default:"-" }}</td>
+      <td>{{ fav.faq.question|truncatechars:60 }}</td>
+      <td>{{ fav.created_at|date:"Y-m-d H:i" }}</td>
     </tr>
   {% empty %}
     <tr><td colspan="3">لا توجد مفضلات</td></tr>
