--- a/unibot_project/custom_admin/templates/custom_admin/feedback_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/feedback_list.html
@@ -1,7 +1,5 @@
 {% extends "custom_admin/generic_list.html" %}
-
 {% block list_title %}التعليقات{% endblock %}
-
 {% block list_headers %}
   <th>السؤال</th>
   <th>المستخدم</th>
@@ -9,15 +7,14 @@
   <th>التعليق</th>
   <th>التاريخ</th>
 {% endblock %}
-
 {% block list_rows %}
-  {% for r in items %}
+  {% for fb in items %}
     <tr>
-      <td>{{ r.faq.question|truncatechars:40 }}</td>
-      <td>{{ r.user.email|default:"-" }}</td>
-      <td>{{ r.helpful|yesno:"نعم,لا" }}</td>
-      <td>{{ r.comment|default:"-"|truncatechars:60 }}</td>
-      <td>{{ r.created_at|date:"Y-m-d H:i" }}</td>
+      <td>{{ fb.faq.question|truncatechars:40 }}</td>
+      <td>{{ fb.user.email|default:"-" }}</td>
+      <td>{{ fb.helpful|yesno:"نعم,لا" }}</td>
+      <td>{{ fb.comment|default:"-"|truncatechars:50 }}</td>
+      <td>{{ fb.created_at|date:"Y-m-d H:i" }}</td>
     </tr>
   {% empty %}
     <tr><td colspan="5">لا توجد تعليقات</td></tr>
