--- a/unibot_project/custom_admin/templates/custom_admin/_nav.html
+++ b/unibot_project/custom_admin/templates/custom_admin/_nav.html
@@ -9,6 +9,6 @@
     <li><a href="{% url 'custom_admin:feedback_list' %}">التعليقات</a></li>
     <li><a href="{% url 'custom_admin:favorites_list' %}">المفضلات</a></li>
     <li><a href="{% url 'custom_admin:users_list' %}">المستخدمون</a></li>
-    <li><a href="/admin/">Django Admin</a></li>
+    <!-- <li><a href="/admin/">Django Admin</a></li> -->
   </ul>
 </nav>
