--- a/unibot_project/custom_admin/templates/custom_admin/base.html
+++ b/unibot_project/custom_admin/templates/custom_admin/base.html
@@ -18,8 +18,8 @@
       <!-- شعار مضمّن (بدون static) -->
       <a href="{% url 'custom_admin:dashboard' %}" class="brand logo-wrap" aria-label="UniBot">
         <!-- SVG مبسّط -->
-        <svg class="logo-svg" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true">
-          <defs>
+         <img class="logo-svg" src="{% static 'custom_admin/img/logo.svg' %}" alt="UniBot Logo">
+          </a>
             <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
               <stop offset="0" stop-color="#2563eb"/>
               <stop offset="1" stop-color="#1d4ed8"/>
